--- a/Deka Tutorial/index.html
+++ b/Deka Tutorial/index.html
@@ -19,9 +19,11 @@ Mau custom web ucapan online & tanpa watermark? Order Aja di Deka Tutorial !! (D
     </div>
 
     <script>
-      ucapan = ``;
-      musik = ``;
-      nomorWhatsapp = ``;
+      ucapan = `haii sayanggku
+      Barakallah fii umrik sayangg
+      semoga bertambahnyo usia sayangg`;
+      musik = `Music.mp3`;
+      nomorWhatsapp = `6285709467209`;
       idTelegram = ``;
 
       DekaTutorial(ucapan, musik, nomorWhatsapp, idTelegram);
