--- a/sayanggku/index.html
+++ b/sayanggku/index.html
@@ -20,7 +20,7 @@ Mau custom web ucapan online & tanpa watermark? Order Aja di Deka Tutorial !! (D
 
     <script>
       ucapan = `haii sayanggku`;
-      musik = `01.mp3`;
+      musik = `musik1.mp3`;
       nomorWhatsapp = `6285709467209`;
       idTelegram = ``;
 
