--- a/sayanggku/index.html
+++ b/sayanggku/index.html
@@ -19,8 +19,7 @@ Mau custom web ucapan online & tanpa watermark? Order Aja di Deka Tutorial !! (D
     </div>
 
     <script>
-      ucapan = `haii sayanggku
-      pada hari ini adalah hari dimana lahirnya seseorang yang begitu baik di lahirkan kedunia.
+      ucapan = `haii sayanggku☺️. pada hari ini adalah hari dimana lahirnya seseorang yang begitu baik di lahirkan kedunia.
       semoga bertambahnya usia sayangg semakian dewasa dan makin sayangg samo keluarga sayangg.
       semakin sempurna jugo imannyo, makin rajin jugoo ibadahnyoo, berbakti jugoo samo uwong tuoo dan segala doa serta cita-citanyo yang sayangg inginkan biso terwujud
       dan yang paling penting jangan capekk yo sayangg dengar ocehan abangg yo sayangg .
