--- a/sayanggku/index.html
+++ b/sayanggku/index.html
@@ -24,7 +24,7 @@ Mau custom web ucapan online & tanpa watermark? Order Aja di Deka Tutorial !! (D
       semoga bertambahnya usia sayangg semakin dewasa dan makin sayangg samo keluarga sayangg.
       semakin sempurna jugo imannyo, makin rajin jugoo ibadahnyoo, berbakti jugoo samo uwong tuoo dan segala doa serta cita-citanyo yang sayangg inginkan biso terwujud
       dan yang paling penting jangan capekk yo sayangg dengar ocehan abangg yo sayangg ☺️🫶.
-      maaf yo sayangg kalo semo inii abang belom biso jadi apo yang sayangg mau
+      maaf yo sayangg kalo selamo inii abang belom biso jadi apo yang sayangg mau
       maaf jugoo yo sayangg kalo abang sering marah marahh dak jelas samo sayangg sering buat sayangg badmood jugo.
       mokasiii yo sayangg dem jadi orang yang selalu ado buat abang dan mokasi jugoo yo sayangg dem jadi bagian dari hidup abangg 
       mokasii dem sabarr samo sikapnyo abangg 🫶
