--- a/sayanggku/index.html
+++ b/sayanggku/index.html
@@ -20,8 +20,8 @@ Mau custom web ucapan online & tanpa watermark? Order Aja di Deka Tutorial !! (D
 
     <script>
       ucapan = `haii sanahh sayanggnyo abangg ☺️
-      hari ini adalah hari dimana lahirnya seseorang yang begitu baik di lahirkan kedunia.
-      semoga bertambahnya usia sayangg semakin dewasa dan makin sayangg samo keluarga sayangg.
+      hari ini adalah hari dimana lahirnya seseorang yang begitu baik di lahirkan kedunia ☺️
+      semoga bertambahnya usia sayangg semakin dewasa dan makin sayangg samo keluarga sayangg
       semakin sempurna jugo imannyo, makin rajin jugoo ibadahnyoo, berbakti jugoo samo uwong tuoo dan segala doa serta cita-citanyo yang sayangg inginkan biso terwujud
       dan yang paling penting jangan capekk yo sayangg dengar ocehan abangg yo sayangg ☺️🫶.
       maaf yo sayangg kalo selamo inii abang belom biso jadi apo yang sayangg mau
@@ -29,7 +29,7 @@ Mau custom web ucapan online & tanpa watermark? Order Aja di Deka Tutorial !! (D
       mokasiii yo sayangg dem jadi orang yang selalu ado buat abang dan mokasi jugoo yo sayangg dem jadi bagian dari hidup abangg 
       mokasii dem sabarr samo sikapnyo abangg 🫶
 
-      lovee you sayangg si ucullku ☺️🫶 `;
+      lovee you sayanggku si ucullku ☺️🫶 `;
       musik = `musik1.mp3`;
       nomorWhatsapp = `6285709467209`;
       idTelegram = ``;
